--- a/article.html
+++ b/article.html
@@ -11,7 +11,7 @@
 <body>
   <!-- スマホのみヘッダーを表示-->
   <header>
-    <div class="logo">悠遊白書</div>
+    <div class="logo">兼田のブログ</div>
     <nav>
       <a href="index.html">ホーム</a>
       <a href="archive.html">記事一覧</a>
